--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   latlong2: ^0.9.0
   double_back_to_close_app: ^2.1.0
   flutter_easyloading: ^3.0.5
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
