--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.0.15
   syncfusion_flutter_pdfviewer: ^22.2.9
   url_launcher: ^6.1.12
+  flutter_inappwebview: ^5.7.2+3
 
 dev_dependencies:
   flutter_test:
