--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^22.2.9
   url_launcher: ^6.1.12
   webview_flutter: ^3.0.4
+  webview_windows: ^0.3.0
 
 dev_dependencies:
   flutter_test:
